# pawn

./: .gitignore  CMakeLists.txt  README.md  bezierCurvesPawn.cpp  bezierCurvesPawn.h  carpet.h  createTexture.cpp  createTexture.h  createTextureBase.cpp  main.cpp  marble_downsized.h  marble_jpg.h  nanosvg.h  pawn_coordinates.h  setupGLFW.cpp  setupGLFW.h  shaders.cpp  shaders.h
data/: convert.sh
python/: extract_coordinates_from_image.py
